[package]
name = "sessions-core"
version = "0.3.2"
authors = ["FangDun Tsai <cfddream@gmail.com>"]
description = "Sessions Core"
documentation = "https://docs.rs/sessions-core"
homepage = "https://github.com/viz-rs/sessions"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
async-trait = "0.1"
cookie = "0.16"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
