[package]
name = "sessions-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Sessions Core"
readme = "README.md"

[features]
session = []

[dependencies]
async-trait.workspace = true
cookie.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
