[package]
name = "sessions-memory"
version = "0.1.6"
authors = ["FangDun Tsai <cfddream@gmail.com>"]
description = "Sessions Memory Storage"
documentation = "https://docs.rs/sessions-memory"
homepage = "https://github.com/viz-rs/sessions"
license = "Apache-2.0/MIT"
readme = "README.md"
edition = "2018"

[dependencies]
sessions-core = { path = "../sessions-core", version = "0.1.6" }
