[package]
name = "sessions-memory"
version = "0.2.3"
authors = ["FangDun Tsai <cfddream@gmail.com>"]
description = "Sessions Memory Storage"
documentation = "https://docs.rs/sessions-memory"
homepage = "https://github.com/viz-rs/sessions"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
sessions-core = { path = "../sessions-core", version = "0.2.3" }
