[package]
name = "sessions-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Sessions Memory Storage"
readme = "README.md"

[dependencies]
sessions-core.workspace = true
