[package]
name = "sessions-redis"
version = "0.3.1"
authors = ["FangDun Tsai <cfddream@gmail.com>"]
description = "Sessions Redis Storage"
documentation = "https://docs.rs/sessions-redis"
homepage = "https://github.com/viz-rs/sessions"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[features]
default = ["tokio-comp"]

tokio-comp = ["redis/aio", "redis/tokio-comp"]
async-std-comp = ["redis/aio", "redis/async-std-comp"]

[dependencies]
sessions-core = { path = "../sessions-core", version = "0.3.0" }

serde_json = "1.0"
redis = { version = "0.21", default-features = false, features = [
  "connection-manager",
] }
