[package]
name = "sessions-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Sessions Redis Storage"
readme = "README.md"

[features]
default = ["tokio"]

tokio = ["redis/tokio-comp"]
async-std = ["redis/async-std-comp"]

[dependencies]
sessions-core.workspace = true

serde_json.workspace = true
redis.workspace = true
