[package]
name = "sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "General sessions module for web services"
keywords = ["async", "framework", "http", "service", "web"]
categories = ["asynchronous", "network-programming", "web-programming"]
readme = "README.md"

[features]
default = []

session = ["sessions-core/session"]

memory = ["dep:sessions-memory"]
redis = ["dep:sessions-redis"]

tokio = ["sessions-redis?/tokio"]
async-std = ["sessions-redis?/async-std"]

[dependencies]
sessions-core.workspace = true
sessions-memory = { workspace = true, optional = true }
sessions-redis = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
nano-id.workspace = true

futures-executor.workspace = true
tokio.workspace = true
redis.workspace = true
